k8s-manifests/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: retail-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/retail-store/cart:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: retail-store
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: cart
